# CircuitPython_SX1280

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: example.py  example_ranging_master.py  example_ranging_slave.py  example_rx.py  example_tx.py
sx1280/: sx1280.py
