[project]
name = "proves-circuitpython-sx1280"
version = "2.0.0"
description = "Flight Software for the PROVES Kit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-typing==1.11.2",
    "circuitpython-stubs==9.2.5",
    "pyright[nodejs]==1.1.399",
    "pre-commit==4.0.1",
]

[tool.setuptools]
packages = [
    "sx1280.py",
]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"

[tool.pyright]
include = ["sx1280.py"]
exclude = [
    "**/__pycache__",
    ".venv",
    ".git",
    "examples",
    "typings",
]
stubPath = "./typings"
reportMissingModuleSource = false
